fix scrollbars on page download

--- a/css/style.css
+++ b/css/style.css
@@ -346,20 +346,11 @@ body {
   padding: 0;
   background: url(../img/wallpapers.jpg) no-repeat center center fixed;
   background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  overflow: hidden;
 }
 
 .container {
-  margin: 0;
+  margin: auto;
   padding: 0;
   width: 100vw;
   height: 100vh;
